begins entry api endpoints and routing
