# routes/api.php
@@ -1,10 +1,15 @@
 <?php
 
 use App\Http\Controllers\Api\v1\User;
+use App\Http\Controllers\Api\v1\Entries;
 use Illuminate\Support\Facades\Route;
 use App\Http\Middleware\LogRequestResponse;
 
 Route::middleware('auth:sanctum')->prefix('v1')->group(function () {
+
     Route::apiResource('users', User::class, ['names' => 'api.v1.users'])
+        ->middleware(LogRequestResponse::class);
+
+    Route::apiResource('entries', Entries::class, ['names' => 'api.v1.entries'])
         ->middleware(LogRequestResponse::class);
 });
